# extraction

./: .nvim.lua  CMakeLists.txt  build.bat  networks.c  run_server.bat  todo.txt
code/: game.cpp  game_math.cpp  network.cpp  opengl_renderer.cpp  opengl_renderer.h  platform.h  renderer.cpp  renderer.h  types.h  win32.cpp
shader/: prim.frag  prim.vert
